# KMeans-KNN_Medicine_Recommender

./: .gitignore  README.md  app.py  pyproject.toml
kmeans_medicine_recommender/: app.py
kmeans_medicine_recommender/src/: dataprep.py
medicine_recommender/: app.py
medicine_recommender/notebooks/: medical_recommandations.ipynb
medicine_recommender/src/: kmeans.py  knn.py
src/: dataprep.py  kmeans.py
