[project]
name = "kmeans_medicine_recommender"
version = "1.0.0"
description = "App for predicting medicine using KMeans clustering on a synthetic Kaggle dataset."
authors = [
    { name = "ewkt" }
]
dependencies = [
    "pandas>=1.5.3",
    "numpy>=1.24.2",
    "scikit-learn>=1.2.2",
    "streamlit>=1.20.0"
]
readme = "README.md"
requires-python = ">=3.9.18"

[project.scripts]
kmeans_medicine_recommender = "kmeans_medicine_recommender.app:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
packages = [
    { include = "kmeans_medicine_recommender" }
]